<resources>
    <string name="app_name">Huzaa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tap_to_change_the_photo">Tap to change the photo</string>
    <string name="genrate_background_color">Genrate Background Color</string>
    <string name="register">Register</string>
    <string name="profile_register_image">Profile Register Image</string>
    <string name="login">Login</string>
    <string name="nav_profile_photo">Nav profile photo</string>
</resources>
